Putting scene switcher together (webGL demos may work now, if not will fix in followup commit)

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -208,7 +208,9 @@ tw-icon:hover {
 	animation:appear 0ms step-start
 }
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -228,7 +230,7 @@ By Time Period
 [[1980s time warp]]
 [[2020 present day office]]
 [[year 7020 far future]]
-note: there are likely to be other spaces and realms added, but these time shifted versions of the main prototyping office/labs area are a start</tw-passagedata><tw-passagedata pid="3" name="playerPath1-amnesia" tags="" position="789.6666666666666,340.6666666666667" size="100,100">You&#39;re laid out on the hardwood floor, waking up to fluorescent lights humming overhead.
+note: there are likely to be other spaces and realms added, but these time shifted versions of the main prototyping office/labs area are a start</tw-passagedata><tw-passagedata pid="3" name="playerPath1-amnesia" tags="" position="789,340" size="100,100">You&#39;re laid out on the hardwood floor, waking up to fluorescent lights humming overhead.
 
 [[I get up, checking myself to make sure I&#39;m unharmed.-&gt;getUp]]
 
@@ -238,18 +240,21 @@ note: there are likely to be other spaces and realms added, but these time shift
 
 No others are here yet, use back option on the left to return
 
-(link: &quot;Chris cube WIP&quot;)[(goto-url: &#39;unity_loader.html?phrase=Eject_game&amp;file=chrisprototype&#39;)]
-(link: &quot;EyeForcz clock&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=clock&#39;)]
-(link: &quot;EyeForcz table&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=turntable&#39;)]</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="371,860" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
+(link: &quot;Chris cube WIP&quot;)[(goto-url: &#39;unity_loader.html?phrase=Eject_game&amp;file=SpinTest&#39;)]
+(link: &quot;EyeForcz clock outside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=1&#39;)]
+(link: &quot;EyeForcz clock inside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=0&#39;)]
+(link: &quot;EyeForcz table&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTable&#39;)]
+(link: &quot;Klaim Infinite Cube Swarm&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=Infinite_Cube_Swarm&#39;)]
+(link: &quot;Justin C. One&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=JChinOne&#39;)]</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="371,860" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
 
-(link: &quot;Tumult eyelid sticker, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]</tw-passagedata><tw-passagedata pid="7" name="prototypes not yet categorized into areas" tags="" position="24.333333333333332,861" size="100,100">(link: &quot;mdfewkes DM&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
+(link: &quot;Tumult eyelid sticker, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]</tw-passagedata><tw-passagedata pid="7" name="prototypes not yet categorized into areas" tags="" position="24,861" size="100,100">(link: &quot;mdfewkes DM&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
 (link: &quot;mdfewkes tb&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)]
 (link: &quot;brianjb demo&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)]
 (link: &quot;kornel demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_newspaper&amp;file=kornel_kornel-index~&#39;)]
 (link: &quot;jchingames demo&quot;)[(goto-url: &#39;jchingames_experiments/first.html&#39;)]
 (link: &quot;rybar demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)]
 
-Note: we don&#39;t yet have a way figured out to convenient add a persistent &quot;put this one down&quot; kind of link at top of Twine projects. We can maybe find a way to open them within an iFrame, with the quit link separate from the main Twine navigation for it?</tw-passagedata><tw-passagedata pid="8" name="getUp" tags="" position="911.6666666666666,344.6666666666667" size="100,100">Patting yourself over, you seem fine.
+Note: we don&#39;t yet have a way figured out to convenient add a persistent &quot;put this one down&quot; kind of link at top of Twine projects. We can maybe find a way to open them within an iFrame, with the quit link separate from the main Twine navigation for it?</tw-passagedata><tw-passagedata pid="8" name="getUp" tags="" position="911,344" size="100,100">Patting yourself over, you seem fine.
 
 Sight is blurry. Maybe it&#39;s from waking up?
 
@@ -259,7 +264,7 @@ You find glasses on the neck of your shirt.
 
 You don&#39;t remember owning glasses.
 
-[[Put the glasses on-&gt;wearGlasses]]</tw-passagedata><tw-passagedata pid="9" name="stayDown" tags="" position="855.6666666666666,231.66666666666669" size="100,100">Clenching your eyelids, straining to remember, your thoughts seem polluted. You can&#39;t tell what&#39;s recent, or what&#39;s a dream.
+[[Put the glasses on-&gt;wearGlasses]]</tw-passagedata><tw-passagedata pid="9" name="stayDown" tags="" position="855,231" size="100,100">Clenching your eyelids, straining to remember, your thoughts seem polluted. You can&#39;t tell what&#39;s recent, or what&#39;s a dream.
 
 [[Give up on trying to remember, and get up-&gt;getUp]].</tw-passagedata><tw-passagedata pid="10" name="writing experiments" tags="" position="564,854" size="100,100">A few ideas of scenes that we couldn&#39;t do well without text
 
@@ -316,13 +321,13 @@ Classical statues
 [[Go to graveyard area-&gt;graveyard]]</tw-passagedata><tw-passagedata pid="19" name="lab" tags="" position="1866,560" size="100,100">Science lab, chemicals and inventions, like a hospital area
 
 [[Time machine to 1990 office-&gt;backInTime]]</tw-passagedata><tw-passagedata pid="20" name="graveyard" tags="" position="1641,842" size="100,100">dark, Bloodborne-ish, feels long ago</tw-passagedata><tw-passagedata pid="21" name="insideBook" tags="" position="1298,553" size="100,100">World inside a book, myst inspired but with its own twist</tw-passagedata><tw-passagedata pid="22" name="futureTower" tags="" position="1626,272" size="100,100">overlooking city in all directions
-maybe only see city here with glasses off?</tw-passagedata><tw-passagedata pid="23" name="backInTime" tags="" position="2005,565" size="100,100">1990 version of main office area, start by hearing a fax?</tw-passagedata><tw-passagedata pid="24" name="playerPath2-teleporter" tags="" position="159.66666666666657,58.333333333333336" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
+maybe only see city here with glasses off?</tw-passagedata><tw-passagedata pid="23" name="backInTime" tags="" position="2005,565" size="100,100">1990 version of main office area, start by hearing a fax?</tw-passagedata><tw-passagedata pid="24" name="playerPath2-teleporter" tags="" position="159,58" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
 
 Your starched collar is warm and moist from sweat. Pulling your tie loose to breathe easier, you glance down just as the lower half of your legs are finishing phasing in. They&#39;ve always advised you not to look down, but now that you finally got the chance to do this, it&#39;s hard to look away. They warned that would probably happen, too.
 
 An flashing orange glow accompanies the transition. You can&#39;t tell whether it&#39;s coming from your legs, or a result effect of eyeballs adjusting as their particles slide tightly back together.
 
-**Time to get started.-&gt;officeStart**</tw-passagedata><tw-passagedata pid="25" name="playerPath3-literal" tags="" position="279.99999999999994,61" size="100,100">Moments ago I was at home, on my computer, minding my own business.
+**Time to get started.-&gt;officeStart**</tw-passagedata><tw-passagedata pid="25" name="playerPath3-literal" tags="" position="279,61" size="100,100">Moments ago I was at home, on my computer, minding my own business.
 
 I followed a few links through HomeTeamGameDev.com, and I don&#39;t fully understand what I&#39;m looking at.
 
@@ -330,7 +335,7 @@ Curiosity got me this far, why not have a quick look around?
 
 Maybe there&#39;s something interesting to see here.
 
-**Explore the office.**</tw-passagedata><tw-passagedata pid="26" name="playerPath4-officeJob" tags="" position="399.6666666666666,71.66666666666666" size="100,100">Y A W N
+**Explore the office.**</tw-passagedata><tw-passagedata pid="26" name="playerPath4-officeJob" tags="" position="399,71" size="100,100">Y A W N
 
 Here&#39;s to another day at the digital prototyping lab.
 
@@ -338,7 +343,7 @@ Am I really the first person to reach the office today? Where is everyone?
 
 Whatever, all else being equal, I&#39;d rather them catch me working.
 
-**It&#39;s time to start the workday.-&gt;officeStart**</tw-passagedata><tw-passagedata pid="27" name="playerPath5-alienClone" tags="" position="164.99999999999994,179.33333333333331" size="100,100">I can&#39;t believe they&#39;re expecting me to stand and walk with just two legs.
+**It&#39;s time to start the workday.-&gt;officeStart**</tw-passagedata><tw-passagedata pid="27" name="playerPath5-alienClone" tags="" position="164,179" size="100,100">I can&#39;t believe they&#39;re expecting me to stand and walk with just two legs.
 
 I reach down and squeeze the mess of meat and fat on my sides. If this is the body ᖽᐸᓍᘉᑢᕴᓰᕲ picked for me, I&#39;m sure there&#39;s a good reason.
 
@@ -352,13 +357,13 @@ I can&#39;t believe they all really live like this.
 
 Disgusting.
 
-Alright, **I&#39;ve got to do my best to blend in.**</tw-passagedata><tw-passagedata pid="28" name="playerPath6-officeLetter" tags="" position="283.33333333333326,181.66666666666663" size="100,100">Walking down the city street one day, you notice an unassuming office just across road that you could swear was never there before.
+Alright, **I&#39;ve got to do my best to blend in.**</tw-passagedata><tw-passagedata pid="28" name="playerPath6-officeLetter" tags="" position="283,181" size="100,100">Walking down the city street one day, you notice an unassuming office just across road that you could swear was never there before.
 
 You&#39;ve been taking this route regularly for years, and you&#39;d never noticed so much as a construction fence. You&#39;d leave it alone, but somethings bothering you about it, maybe the way it&#39;s so hard to picture what was there before. Had you just never paid attention? Was this always there?
 
 There&#39;s an envelope on the ground near the door, already torn open with a folded letter hanging partway out, gentle scooting and twisting in the wind. Perhaps it fell from the mail slot.
 
-Wouldn&#39;t want it to blow away - better [[cross the street to check it out.-&gt;openGroundLetter]]</tw-passagedata><tw-passagedata pid="29" name="openGroundLetter" tags="" position="401.6666666666666,184.9999999999999" size="100,100">You cross the street and step on the letter, so it won&#39;t blow away while you think of what to do next.
+Wouldn&#39;t want it to blow away - better [[cross the street to check it out.-&gt;openGroundLetter]]</tw-passagedata><tw-passagedata pid="29" name="openGroundLetter" tags="" position="401,184" size="100,100">You cross the street and step on the letter, so it won&#39;t blow away while you think of what to do next.
 
 You consider shoving it back into the door&#39;s mail slot.
 
@@ -380,7 +385,7 @@ You&#39;re feeling chilly from a strong AC vent overhead.
 
 You&#39;re on the other side of a door, inexplicably finding yoruself in an office. Looking out the glass, it&#39;s not even clear this was the same door you were on the other side of.
 
-**Let&#39;s see if there&#39;s a good desk to leave this letter on.**</tw-passagedata><tw-passagedata pid="30" name="unused intros" tags="" position="18,88.33333333333331" size="100,100">Might still repurpose for a spinoff prototype or easter egg?
+**Let&#39;s see if there&#39;s a good desk to leave this letter on.**</tw-passagedata><tw-passagedata pid="30" name="unused intros" tags="" position="18,88" size="100,100">Might still repurpose for a spinoff prototype or easter egg?
 
 [[teleported here-&gt;playerPath2-teleporter]]
 
@@ -390,7 +395,7 @@ You&#39;re on the other side of a door, inexplicably finding yoruself in an offi
 
 [[alien clone-&gt;playerPath5-alienClone]]
 
-[[street office letter-&gt;playerPath6-officeLetter]]</tw-passagedata><tw-passagedata pid="31" name="wearGlasses" tags="" position="1063.3333333333333,336.33333333333337" size="100,100">Your vision comes into focus. The glasses help.
+[[street office letter-&gt;playerPath6-officeLetter]]</tw-passagedata><tw-passagedata pid="31" name="wearGlasses" tags="" position="1063,336" size="100,100">Your vision comes into focus. The glasses help.
 
 You&#39;re in the reception area of an office.
 
