Fix to Unity Loader

--- a/HP Labs Main Twine and JS Projects/unity_loader.html
+++ b/HP Labs Main Twine and JS Projects/unity_loader.html
@@ -52,7 +52,7 @@ window.onload = function() {
       function OnScenesReady(){
           console.log("success! application is loaded")
           unityInstance.SendMessage("MasterSwitcher","SetParam",paramVal);
-          unityInstance.SendMessage("MasterSwitcher","SceneLoad","SpinTest");
+          unityInstance.SendMessage("MasterSwitcher","SceneLoad",sceneName);
       }
     </script>
   </head>
