URL param converted from string to int before going from page JS to Unity function

--- a/HP Labs Main Twine and JS Projects/unity_loader.html
+++ b/HP Labs Main Twine and JS Projects/unity_loader.html
@@ -33,7 +33,7 @@ buildName = "common";
 sceneName = args["file"];
 sceneName = replaceAll(sceneName,"_", " ");
 if (typeof(args["param"]) !== 'undefined') {
-  paramVal = args["param"];
+  paramVal = parseInt(args["param"]);
 } else {
   paramVal = 0;
 }
