trying out VO test for initial player intro path sequence

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -313,7 +313,8 @@ note: there are likely to be other spaces and realms added, but these time shift
 
 [[I get up, checking myself to make sure I&#39;m unharmed.-&gt;getUp]]
 
-[[I stay down, trying to remember how I got here.-&gt;stayDown]]</tw-passagedata><tw-passagedata pid="4" name="1980s time warp" tags="" position="151,859" size="100,100">This will be a place for retro Apple IIe / Atari / VHS / NES era glitch art stuff
+[[I stay down, trying to remember how I got here.-&gt;stayDown]]
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re laid out on the hardwood floor, waking up to fluorescent lights humming overhead.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="1980s time warp" tags="" position="151,859" size="100,100">This will be a place for retro Apple IIe / Atari / VHS / NES era glitch art stuff
 
 (link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]</tw-passagedata><tw-passagedata pid="5" name="2020 present day office" tags="" position="264,860" size="100,100">This area might have the most recognizably &quot;normal&quot; things like single mechanic tiny gameplay prototypes
 
@@ -343,9 +344,12 @@ You find glasses on the neck of your shirt.
 
 You don&#39;t remember owning glasses.
 
-[[Put the glasses on-&gt;wearGlasses]]</tw-passagedata><tw-passagedata pid="9" name="stayDown" tags="" position="855,231" size="100,100">Clenching your eyelids, straining to remember, your thoughts seem polluted. You can&#39;t tell what&#39;s recent, or what&#39;s a dream.
+[[Put the glasses on-&gt;wearGlasses]]
 
-[[Give up on trying to remember, and get up-&gt;getUp]].</tw-passagedata><tw-passagedata pid="10" name="writing experiments" tags="" position="564,854" size="100,100">A few ideas of scenes that we couldn&#39;t do well without text
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Patting yourself over, you seem fine. Sight is blurry. Maybe it\&#39;s from waking up? Pockets are empty. No wallet, phone, or keys. You find glasses on the neck of your shirt. You don\&#39;t remember owning glasses.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="9" name="stayDown" tags="" position="855,231" size="100,100">Clenching your eyelids, straining to remember, your thoughts seem polluted. You can&#39;t tell what&#39;s recent, or what&#39;s a dream.
+
+[[Give up on trying to remember, and get up-&gt;getUp]].
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Clenching your eyelids, straining to remember, your thoughts seem polluted. You can\&#39;t tell what\&#39;s recent, or what\&#39;s a dream.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="10" name="writing experiments" tags="" position="564,854" size="100,100">A few ideas of scenes that we couldn&#39;t do well without text
 
 [[Chaotic amount of papers, books, high ceilings.-&gt;hugeLibrary]]
 
@@ -393,7 +397,9 @@ This office area might have a blended Apple/MS or trendy startup vibe. Lots of o
 
 [[go south to fenced garden maze-&gt;garden]]
 
-[[go east to science lab-&gt;lab]]</tw-passagedata><tw-passagedata pid="16" name="underground" tags="" position="1635,413" size="100,100">[[Go up into distant future tower-&gt;futureTower]]</tw-passagedata><tw-passagedata pid="17" name="library" tags="" position="1455,552" size="100,100">was thinking very large library, but maybe more a messy used bookstore horading vibe
+[[go east to science lab-&gt;lab]]
+
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;These areas are not yet fleshed out, but just navigation is started. This office area might have a blended Apple/MS or trendy startup vibe. Lots of office plants.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="underground" tags="" position="1635,413" size="100,100">[[Go up into distant future tower-&gt;futureTower]]</tw-passagedata><tw-passagedata pid="17" name="library" tags="" position="1455,552" size="100,100">was thinking very large library, but maybe more a messy used bookstore horading vibe
 [[Enter book world-&gt;insideBook]]</tw-passagedata><tw-passagedata pid="18" name="garden" tags="" position="1641,692" size="100,100">Hedge maze?
 Classical statues
 
@@ -480,7 +486,9 @@ You&#39;re in the reception area of an office.
 
 Rows of empty cubicles are visible through a propped open door.
 
-[[Investigate the office-&gt;officeStart]]</tw-passagedata></tw-storydata>
+[[Investigate the office-&gt;officeStart]]
+
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Your vision comes into focus. The glasses help. You\&#39;re in the reception area of an office. Rows of empty cubicles are visible through a propped open door.&#39;)&quot;&gt;</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
