Set up turn table car scene (so far just turn table and the models, no movement or interaction yet))

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -323,7 +323,8 @@ No others are here yet, use back option on the left to return
 (link: &quot;Chris cube WIP&quot;)[(goto-url: &#39;unity_loader.html?phrase=Eject_game&amp;file=SpinTest&#39;)]
 (link: &quot;EyeForcz clock outside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=1&#39;)]
 (link: &quot;EyeForcz clock inside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=0&#39;)]
-(link: &quot;EyeForcz table&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTable&#39;)]
+(link: &quot;EyeForcz table 1 (Crystal)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTable&#39;)]
+(link: &quot;EyeForcz table 2 (Cars)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTableCar&#39;)]
 (link: &quot;Klaim Infinite Cube Swarm&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=Infinite_Cube_Swarm&#39;)]
 (link: &quot;Justin C. One&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=JChinOne&#39;)]</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="371,860" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
 
