car scene updated, inspired by "mcfunkypants: ...you could put it inside a snow globe"

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -295,6 +295,8 @@ var speakerThing = {
 };
 window.SpeakingThing = speakerThing;</script><tw-passagedata pid="1" name="Here is where it starts" tags="" position="393,560" size="100,100">&lt;h3&gt;Hidden Passages 2: R&amp;D prototype&lt;/h3&gt;
 
+Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine scenes to toggle Voiceover on or off. This will be restored when returning from prototypes.
+
 [[debug path]]: demos quick access
 
 [[player intro sequence-&gt;playerPath1-amnesia]]: first things player will see
