--- a/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
+++ b/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
@@ -11,7 +11,7 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="Bomb" startnode="1" creator="Twine" creator-version="2.3.5" ifid="A6BB2127-2849-44DB-8AE7-A5EF99C3BCCC" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start" tags="" position="865,257" size="100,100">(set: $seconds to 10)
+<tw-storydata name="Bomb" startnode="1" creator="Twine" creator-version="2.3.5" ifid="A6BB2127-2849-44DB-8AE7-A5EF99C3BCCC" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start Point" tags="" position="823,156" size="100,100">(set: $seconds to 10)
 
 &#39;**DO SOMETHING!**&#39;
 You hear a scream in your left ear.
@@ -20,7 +20,7 @@ You hear a scream in your left ear.
 You see a box before you.
 
 [[Take a look at the box -&gt; Box]]
-[[Open the box -&gt;Open Armed]]</tw-passagedata><tw-passagedata pid="2" name=" Box" tags="" position="790,407" size="100,100">(set: $seconds to $seconds - 1)
+[[Open the box -&gt;Open Armed]]</tw-passagedata><tw-passagedata pid="2" name=" Box" tags="" position="810,364" size="100,100">(set: $seconds to $seconds - 1)
 
 The box is (css: &quot;font-size: 80%;&quot;)[small]. The lit seem to open. It&#39;s made out of wood.
 
@@ -29,13 +29,24 @@ Unremarkable in almost every way except for a small bump on a side. Noticeable o
 And a counter on top of the lit. (css: &quot;font-size: 120%;&quot;)[Large] LED display. **Bold** (colour: &quot;#e61919&quot;)[red] numbers counting down: (colour: &quot;#e61919&quot;)[**$seconds**].
 
 [[Put it back -&gt; Table]]
-[[Press the small bump on the side -&gt; Bump]]</tw-passagedata><tw-passagedata pid="3" name="Open Armed" tags="" position="939,407" size="100,100">(css: &quot;font-size: 150%;&quot;)[(colour: &quot;#e61919&quot;)[**BOOM!!!**]]</tw-passagedata><tw-passagedata pid="4" name=" Table" tags="" position="715,557" size="100,100">(set: $seconds to $seconds - 1)
+[[Press the small bump on the side -&gt; Bump]]</tw-passagedata><tw-passagedata pid="3" name="Open Armed" tags="" position="949,363" size="100,100">(css: &quot;font-size: 150%;&quot;)[(colour: &quot;#e61919&quot;)[**BOOM!!!**]]
 
-You place the box gently on the table. The display shows: (colour: &quot;#e61919&quot;)[**$seconds**].</tw-passagedata><tw-passagedata pid="5" name=" Bump" tags="" position="865,557" size="100,100">(set: $seconds to $seconds - 1)
+*[[Restart the game -&gt; Start Point]]*</tw-passagedata><tw-passagedata pid="4" name=" Table" tags="" position="713,551" size="100,100">(set: $seconds to $seconds - 1)
+
+You place the box gently on the table. The display shows: (colour: &quot;#e61919&quot;)[**$seconds**].</tw-passagedata><tw-passagedata pid="5" name=" Bump" tags="" position="885,549" size="100,100">(set: $seconds to $seconds - 1)
 
 You pressed the *small bump* and hear a quiet &#39;click&#39;.
 
-[[Put the box on the table -&gt; Table]]</tw-passagedata></tw-storydata>
+[[Put the box on the table -&gt; Table]]</tw-passagedata><tw-passagedata pid="6" name=" Start Point" tags="" position="944,156" size="100,100">(set: $seconds to 10)
+
+&#39;**DO SOMETHING!**&#39;
+You hear a scream in your left ear.
+&#39;It&#39;s gonna blow in (colour: &quot;#e61919&quot;)[**$seconds**] seconds!!!&#39;
+
+You see a box before you.
+
+[[Take a look at the box -&gt; Box]]
+[[Open the box -&gt;Open Armed]]</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
